chore: setup project and add config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Eldos <eldos.baktybekov@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-aiohttp = "^3.8.1"
-aioredis = "^2.0.1"
 environs = "^9.5.0"
+loguru = "^0.6.0"
+requests = "^2.27.1"
+redis = "^4.1.4"
 
 [tool.poetry.dev-dependencies]
 
