:heavy_plus_sign: add cryptography package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.9"
 environs = "^9.5.0"
 requests = "^2.27.1"
 redis = "^4.1.4"
+cryptography = "^37.0.3"
+pymongo = "^4.1.1"
+dnspython = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
 
