:wrench: Update `config.py` and `.env.dist`
* Use REDIS_URL
* Remove redundant env vars related to cookies
* Add credentials for token auth
* Add DEBUG mode

--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,8 @@
-COOKIES_UPDATE_DELAY=int
-COOKIES_LIVETIME=int
-COOKIES_UPDATE_THRESHOLD=int
-REDIS_HOST=str
-REDIS_PORT=int
-REDIS_DB=int
+COOKIES_LIFETIME=int
 SECRET_KEY=str
+REDIS_URL=str
 MONGO_DB_URL=str
+CLIENT_ID=str
+CLIENT_SECRET=str
+REDIRECT_URI=str
+DEBUG=bool
