--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,7 @@
-COOKIES_LIFETIME=int
-SECRET_KEY=str
-REDIS_URL=str
-MONGO_DB_URL=str
-CLIENT_ID=str
-CLIENT_SECRET=str
-REDIRECT_URI=str
-DEBUG=bool
+SECRET_KEY=pe5crkWiPHzJ1EeVRtRSZscLF5bRsHBXCfKxLCsEnfD=
+CLIENT_ID=goretsky-band
+CLIENT_SECRET=XPjVpTus1302xkr5D0r9Aa6yabUq3a7d
+REDIRECT_URI=http://89.108.70.229/token
+DEBUG=false
+DATABASE_API_BASE_URL=http://127.0.0.1:8000
+AUTH_SERVICE_BASE_URL=http://127.0.0.1:8000
