--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,8 @@ python = "^3.10"
 environs = "^9.5.0"
 requests = "^2.27.1"
 cryptography = "^37.0.3"
-pymongo = "^4.1.1"
-dnspython = "^2.2.1"
 dodo-lib-usbtypec1 = "^1.1.0"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
