:wrench: Remove creds

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,7 @@
-SECRET_KEY=pe5crkWiPHzJ1EeVRtRSZscLF5bRsHBXCfKxLCsEnfD=
-CLIENT_ID=goretsky-band
-CLIENT_SECRET=XPjVpTus1302xkr5D0r9Aa6yabUq3a7d
-REDIRECT_URI=http://89.108.70.229/token
+SECRET_KEY=str
+CLIENT_ID=str
+CLIENT_SECRET=str
+REDIRECT_URI=str
 DEBUG=false
-DATABASE_API_BASE_URL=http://127.0.0.1:8000
-AUTH_SERVICE_BASE_URL=http://127.0.0.1:8000
+DATABASE_API_BASE_URL=str
+AUTH_SERVICE_BASE_URL=str
