:heavy_plus_sign: GI-10 Add `fastapi`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.27.1"
 cryptography = "^37.0.3"
 psycopg2-binary = "^2.9.5"
 sqlalchemy = "^2.0.3"
+fastapi = "^0.92.0"
 
 [tool.poetry.dev-dependencies]
 
