--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ cryptography = "^37.0.3"
 psycopg2-binary = "^2.9.5"
 sqlalchemy = "^2.0.3"
 fastapi = "^0.92.0"
+uvicorn = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
